[project]
name = "reolink-timelapse"
version = "0.1.0"
description = "Timelapse generator for Reolink NVR cameras"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reolink_timelapse"]
